apps/affine/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: affine-http-route
  namespace: affine
  annotations:
    external-dns.alpha.kubernetes.io/hostname: notes.hoytlabs.app
spec:
  parentRefs:
    - name: gateway-external
      namespace: gateway
  hostnames:
    - "notes.hoytlabs.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: affine-svc
          port: 3010
          weight: 1
